# undo

./: .gitignore  CHANGELOG.md  undo.cabal
src/Control/: Undo.hs
src/Control/Undo/: Internal.hs  Pure.hs
test/: Main.hs
