cabal-version:      2.4
name:               undo
version:            0.1.0
synopsis:           Branching, navigable state
description:
  Undo provides a data structure which tracks a branching state, 
  such as navigating URLs on the web, or remembering the contents of
  a clipboard. This package also proides a wrapper monad UndoM which tracks this 
  state for you.

homepage:           https://github.com/MorrowM/undo
bug-reports:        https://github.com/MorrowM/undo/issues
license:            MIT
author:             Morrow
maintainer:         themorrowm@gmail.com
copyright:          © MorrowM, 2021
category:           Control
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Control.Undo
    Control.Undo.Internal
    Control.Undo.Pure

  build-depends:
    , base          ^>=4.14
    , mtl           ^>=2.2
    , transformers  ^>=0.5

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite undo-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , hspec
    , QuickCheck
    , undo

  hs-source-dirs:   test
  default-language: Haskell2010
